@@ -1,5 +1,7 @@
 11.0.16
 ------
+(RB=1019823)
+Expose collection metadata projection mask in FilterRequestContext.
 
 11.0.15
 ------
